@@ -25,6 +25,14 @@ JUnit Plafform 1.6 (https://junit.org/junit5/docs/5.6.0/release-notes/index.html
 
 - Upgrade JUnit 4 to 4.13
 
+- `constructorArgs` now properly transport type cast information to the constructor selection,
+  for example to disambiguate multiple candidate constructors
++
+[source,groovy]
+----
+Spy(constructorArgs: [null as String])
+----
+
 == 2.0-M2 (2020-02-10)
 
 === Groovy-3.0 Support
